--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,13 +25,13 @@
 
 @misc{yu2025lambdascaleenablingfastscaling,
       title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
-      author={Minchen Yu*, Rui Yang*, Chaobo Jia, Zhaoyuan Su, Sheng Yao, Tingfeng Lan, Yuchen Yang, Yue Cheng, Wei Wang, Ao Wang, Ruichuan Chen},
+      author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
       year={2025},
-      eprint={2502.09922},
+      arxiv={2502.09922},
       archivePrefix={arXiv},
       primaryClass={cs.DC},
       url={https://arxiv.org/abs/2502.09922},
       annotation={* Co-first authors},
       selected={true},
-      abbr={ArXiv}
+      abbr={Preprint}
 }
