--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,6 @@
 @article{10.14778/3636218.3636232,
  author = {Yang, Rui and Kornaropoulos, Evgenios M. and Cheng, Yue},
  title = {Algorithmic Complexity Attacks on Dynamic Learned Indexes},
- year = {2024},
  issue_date = {December 2023},
  publisher = {VLDB Endowment},
  volume = {17},
@@ -13,7 +12,7 @@
  url = {https://doi.org/10.14778/3636218.3636232},
  doi = {10.14778/3636218.3636232},
  abstract = {Learned Index Structures (LIS) view a sorted index as a model that learns the data distribution, takes a data element key as input, and outputs the predicted position of the key. The original LIS can only handle lookup operations with no support for updates, rendering it impractical to use for typical workloads. To address this limitation, recent studies have focused on designing efficient dynamic learned indexes. ALEX, as the first and one of the representative dynamic learned index structures, enables dynamism by incorporating a series of design choices, including adaptive key space partitioning, dynamic model retraining, and sophisticated engineering and policies that prioritize read/write performance. While these design choices offer improved average-case performance, the emphasis on flexibility and performance increases the attack surface by allowing adversarial behaviors that maximize ALEX's memory space and time complexity in worst-case scenarios.In this work, we present the first systematic investigation of algorithmic complexity attacks (ACAs) targeting the worst-case scenarios of ALEX. We introduce new ACAs that fall into two categories, space ACAs and time ACAs, which target the memory space and time complexity, respectively. First, our space ACA on data nodes exploits ALEX's gapped array layout and uses Multiple-Choice Knapsack (MCK) to generate an optimal adversarial insertion plan for maximizing the memory consumption at the data node level. Second, our space ACA on internal nodes exploits ALEX's catastrophic cost mitigation mechanism, causing an out-of-memory (OOM) error with only a few hundred adversarial insertions. Third, our time ACA generates pathological insertions to increase the disparity between the actual key distribution and the linear models of data nodes, deteriorating the runtime performance by up to 1, 641\texttimes{} compared to ALEX operating under legitimate workloads.},
- journal = {In 50th International Conference on Very Large Data Bases 2024},
+ journal = {In 50th International Conference on Very Large Databases 2024},
  pages = {780–793},
  numpages = {14},
  arxiv={2403.12433},
@@ -26,7 +25,7 @@
 @misc{yu2025lambdascaleenablingfastscaling,
       title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
       author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
-      year={2025},
+      year={In 2025},
       arxiv={2502.09922},
       archivePrefix={arXiv},
       primaryClass={cs.DC},
