--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,20 +3,7 @@
 @misc{yu2025lambdascaleenablingfastscaling,
       title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
       author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
-      year={In 2025},
-      arxiv={2502.09922},
-      archivePrefix={arXiv},
-      primaryClass={cs.DC},
-      url={https://arxiv.org/abs/2502.09922},
-      annotation={* Co-first authors},
-      selected={true},
-      abbr={Preprint}
-}
-
-@misc{yu2025lambdascaleenablingfastscaling,
-      title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
-      author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
-      year={In 2025},
+      year={2025},
       arxiv={2502.09922},
       archivePrefix={arXiv},
       primaryClass={cs.DC},
@@ -46,4 +33,5 @@
  selected={true},
  abbr={VLDB'24}
 }
+
 
