--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,7 @@
     url = {https://doi.org/10.14778/3636218.3636232},
     doi = {10.14778/3636218.3636232},
     journal = {In 50th International Conference on Very Large Databases 2024},
+    year={2024},
     pages = {780–793},
     numpages = {14},
     arxiv={2403.12433},
