--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
       title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
       author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
       arxiv={2502.09922},
+      year={2024},
       archivePrefix={arXiv},
       primaryClass={cs.DC},
       url={https://arxiv.org/abs/2502.09922},
