--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,13 +4,13 @@
       title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
       author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
       arxiv={2502.09922},
-      year={2024},
+      year={2025},
       archivePrefix={arXiv},
       primaryClass={cs.DC},
       url={https://arxiv.org/abs/2502.09922},
-      annotation={* Co-first authors},
+      annotation={*: Co-first authors},
       selected={true},
-      abbr={Preprint}
+      abbr={Preprint},
 }
 
 @article{10.14778/3636218.3636232,
@@ -24,7 +24,6 @@
     url = {https://doi.org/10.14778/3636218.3636232},
     doi = {10.14778/3636218.3636232},
     journal = {In 50th International Conference on Very Large Databases 2024},
-    year={2024},
     pages = {780–793},
     numpages = {14},
     arxiv={2403.12433},
