--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @misc{yu2025lambdascaleenablingfastscaling,
       title={{\lambda}Scale: Enabling Fast Scaling for Serverless Large Language Model Inference}, 
-      author={Minchen* Yu and Rui* Yang and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
+      author={Minchen Yu* and Rui Yang* and Chaobo Jia and Zhaoyuan Su and Sheng Yao and Tingfeng Lan and Yuchen Yang and Yue Cheng and Wei Wang and Ao Wang and Ruichuan Chen},
       arxiv={2502.09922},
       year={2025},
       archivePrefix={arXiv},
