--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
       annotation={*: Co-first authors},
       selected={true},
       abbr={Preprint},
+      note={In 2025}
 }
 
 @article{10.14778/3636218.3636232,
@@ -17,6 +18,7 @@
     title = {Algorithmic Complexity Attacks on Dynamic Learned Indexes},
     issue_date = {December 2023},
     publisher = {VLDB Endowment},
+    journal = {In 50th International Conference on Very Large Data Bases 2024},
     volume = {17},
     number = {4},
     issn = {2150-8097},
