--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,6 @@
     title = {Algorithmic Complexity Attacks on Dynamic Learned Indexes},
     issue_date = {December 2023},
     publisher = {VLDB Endowment},
-    journal = {In 50th International Conference on Very Large Data Bases 2024},
     volume = {17},
     number = {4},
     issn = {2150-8097},
@@ -30,7 +29,8 @@
     pdf={https://www.vldb.org/pvldb/vol17/p780-yang.pdf},
     code={https://github.com/ds2-lab/aca-dlis},
     selected={true},
-    abbr={VLDB'24}
+    abbr={VLDB'24},
+    note = {In 50th International Conference on Very Large Databases 2024}
 }
 
 
